--- a/snippets/snippets.html
+++ b/snippets/snippets.html
@@ -130,3 +130,19 @@
         </p>
     </div>
 </div>
+
+<div class="quiz-controls">
+    <a class="carousel-control-prev carousel-control" href="#carouselExampleControls" role="button" data-slide="prev">
+        <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+        <button class="circle-slide-btn">Prev</button>
+        <span class="sr-only">Prev</span>
+    </a>
+    <div class="quiz-number">
+        <p class="normal-text">1/10</p>
+    </div>
+    <a class="carousel-control-next carousel-control" href="#carouselExampleControls" role="button" data-slide="next">
+        <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+        <button class="circle-slide-btn">Next</button>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
