Set up quiz to switch between divs

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
     <!-- quiz section -->
     <section class="quiz-section">
-        <div id="quizIntro" class="quiz-intro">
+        <div id="quizCta" class="quiz-intro">
             <h2 class="quiz-title sect-title">
                 The coaching  
             </h2>
@@ -188,16 +188,24 @@
                 <h4 id="quizResult" class="quiz-content-title sect-title">
                     Find out if coaching is for you in less than 60 seconds
                 </h4>
-                <!-- <p class="quiz-content-main normal-text">
-                    Personal life coaching is not for everyone. There are some who would benefit from a 
-                    life coach, but they aren't ready to make the changes necessary to better their lives. 
-                    After the quiz you will have a clearer idea and understanding as to whether a life coach is right for you.
-                </p> -->
                 <div class="quiz-cta">
-                    <a id="quizStart" href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
+                    <a id="quizIntroBtn" href="" class="quiz-cta-btn btn-black normal-text">Tell me more</a>
                 </div>
-            </div>    
+            </div>  
         </div>
+        <div id="quizIntro" class="quiz-cta-content">
+            <h2 class="quiz-title sect-title">
+                The coaching <span class="logo-font">quiz</span>
+            </h2>
+            <p id="quizIntroText" class="quiz-content-main normal-text">
+                Personal life coaching is not for everyone. There are some who would benefit from a 
+                life coach, but they aren't ready to make the changes necessary to better their lives. 
+                After the quiz you will have a clearer idea and understanding as to whether a life coach is right for you.
+            </p>
+            <div class="quiz-cta">
+                <a id="quizStart" href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
+            </div>
+        </div>   
         <div id="quiz" class="quiz-item">
             <h2 class="quiz-title sect-title">
                 The coaching <span class="logo-font">quiz</span>
