Add smooth transition to quiz
Add quiz to all screen sizes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p class="logo-sub animate__animated animate__fadeInRight animate__delay-2s">your best life ever</p> -->
             <p class="animate__animated animate__fadeInLeft animate__delay-1s">I'm here to help you</p>
             <p class="animate__animated animate__fadeInLeft animate__delay-1s">Release your power</p>
-            <p class="logo-sub animate__animated animate__fadeInRight animate__delay-1s">Live your purpose</p>
+            <p class="logo-sub animate__animated animate__fadeInRight animate__delay-1s">to Live your purpose</p>
             <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s"></p> -->
         </div>
     </section>
@@ -177,7 +177,7 @@
 
     <!-- quiz section -->
     <section class="quiz-section">
-        <div id="quizCta" class="quiz-intro">
+        <div id="quizCta" class="">
             <h2 class="quiz-title sect-title">
                 The coaching  
             </h2>
@@ -193,7 +193,7 @@
                 </div>
             </div>  
         </div>
-        <div id="quizIntro" class="quiz-cta-content">
+        <div id="quizIntro" class="quiz-intro quiz-cta-content">
             <h2 class="quiz-title sect-title">
                 The coaching <span class="logo-font">quiz</span>
             </h2>
@@ -213,8 +213,8 @@
             <div class="question-number normal-text"><i>Question <span id="questionNumber"></span></i></div>
             <div id="question" class="normal-text quiz-label"></div> 
             <div class="options">
-                <button id="choiceTrue" class="option-btn">True</button>
-                <button id="choiceFalse" class="option-btn">False</button>
+                <button id="choiceTrue" class="option-btn btn-white-sm">True</button>
+                <button id="choiceFalse" class="option-btn btn-white-sm">False</button>
             </div>
         </div>
     </section>
