Tidy up margins on all pages

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     Take my quick fire quiz to find out.  Spoiler alert, the fact that you are here means the answers are YES and YES.
                 </p>
                 <div class="coach-cta-btn">
-                    <a class="btn-white-sm" href="services.html">TELL ME MORE</a>
+                    <a class="btn-white-sm" href="about.html">TELL ME MORE</a>
                 </div>
             </div>
         </div>
@@ -154,7 +154,7 @@
                     </p>
                 </p>
                 <div class="coach-cta-btn">
-                    <a class="btn-white-sm" href="services.html">TELL ME MORE</a>
+                    <a class="btn-white-sm" href="testimonials.html">TELL ME MORE</a>
                 </div>
             </div>
         </div>
@@ -177,6 +177,7 @@
 
     <!-- quiz section -->
     <section class="quiz-section">
+        <!-- First quiz CTA section -->
         <div id="quizCta" class="">
             <h2 class="quiz-title sect-title">
                 The coaching  
@@ -193,6 +194,8 @@
                 </div>
             </div>  
         </div>
+
+        <!-- Second quiz intro section -->
         <div id="quizIntro" class="quiz-intro quiz-cta-content">
             <h2 class="quiz-title sect-title">
                 The coaching <span class="logo-font">quiz</span>
@@ -206,6 +209,8 @@
                 <a id="quizStart" href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
             </div>
         </div>   
+
+        <!-- Third quiz Quiz section -->
         <div id="quiz" class="quiz-item">
             <h2 class="quiz-title sect-title">
                 The coaching <span class="logo-font">quiz</span>
