--- a/snippets/snippets.html
+++ b/snippets/snippets.html
@@ -146,3 +146,59 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
+<!-- why tick list section -->
+<section class="tick-list-section">
+    <div class="tick-list-grid">
+        <div class="tick-list-img">
+            <img src="static/img/core-img/straight.jpeg" alt="">
+        </div>
+        <div class="tick-list-content">
+            <h2 class="sect-title tick-list-title">
+                This is a must attend if...
+            </h2>
+            <div class="tick-item">
+                <div class="tick">
+                    <i class="far fa-check-circle"></i>
+                </div>
+                <div class="tick-text normal-text">
+                    You're sick of doing it all, never relaxing, and feeling like your schedule controls you. 
+                </div> 
+            </div>
+            <div class="tick-item">
+                <span class="tick">
+                    <i class="far fa-check-circle"></i>
+                </span>
+                <span class="tick-text normal-text">
+                    Twee shoreditch hoodie cred man bun affogato YOLO selfies. Microdosing tumblr tofu, woke iPhone portland slow-carb. 
+                </span>
+            </div>
+            <div class="tick-item">
+                <span class="tick">
+                    <i class="far fa-check-circle"></i>
+                </span>
+                <span class="tick-text normal-text">
+                    messenger bag small batch austin everyday carry bicycle rights. Mixed up heirloom echo park. YOLO selfies. Microdosing
+                </span>
+            </div>
+            <div class="tick-item">
+                <span class="tick">
+                    <i class="far fa-check-circle"></i>
+                </span>
+                <span class="tick-text normal-text">
+                    You're sick of doing it all, never relaxing, and feeling like your schedule controls you. 
+                </span>
+            </div>
+            <div class="tick-item">
+                <span class="tick">
+                    <i class="far fa-check-circle"></i>
+                </span>
+                <span class="tick-text normal-text">
+                    messenger bag small batch austin everyday carry bicycle rights. Mixed up heirloom echo park. YOLO selfies. Microdosing 
+                </span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- END: why tick list section -->
