--- a/about.html
+++ b/about.html
@@ -152,23 +152,49 @@
 
     <!-- quiz section -->
     <section class="quiz-section">
-        <h2 class="quiz-title sect-title">
-            The coaching  
-        </h2>
-        <h3 class="quiz-font logo-font">
-            quiz
-        </h3>
-        <div class="quiz-cta-content">
-            <h4 class="quiz-content-title sect-title">
-                Find out if coaching is for you in less than 60 seconds
-            </h4>
-            <!-- <p class="quiz-content-main normal-text">
+        <!-- First quiz CTA section -->
+        <div id="quizCta" class="">
+            <h2 class="quiz-title sect-title">
+                The coaching  
+            </h2>
+            <h3 class="quiz-font logo-font">
+                quiz
+            </h3>
+            <div class="quiz-cta-content">
+                <h4 id="quizResult" class="quiz-content-title sect-title">
+                    Find out if coaching is for you in less than 60 seconds
+                </h4>
+                <div class="quiz-cta">
+                    <a id="quizIntroBtn" href="" class="quiz-cta-btn btn-black normal-text">Tell me more</a>
+                </div>
+            </div>  
+        </div>
+
+        <!-- Second quiz intro section -->
+        <div id="quizIntro" class="quiz-intro quiz-cta-content">
+            <h2 class="quiz-title sect-title">
+                The coaching <span class="logo-font">quiz</span>
+            </h2>
+            <p id="quizIntroText" class="quiz-content-main normal-text">
                 Personal life coaching is not for everyone. There are some who would benefit from a 
                 life coach, but they aren't ready to make the changes necessary to better their lives. 
                 After the quiz you will have a clearer idea and understanding as to whether a life coach is right for you.
-            </p> -->
+            </p>
             <div class="quiz-cta">
-                <a href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
+                <a id="quizStart" href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
+            </div>
+        </div>   
+
+        <!-- Third quiz Quiz section -->
+        <div id="quiz" class="quiz-item">
+            <h2 class="quiz-title sect-title">
+                The coaching <span class="logo-font">quiz</span>
+            </h2>
+            <div class="question-number normal-text"><i>Question <span id="questionNumber"></span></i></div>
+            <div id="question" class="normal-text quiz-label"></div> 
+            <div class="options">
+                <button id="choiceTrue" class="option-btn btn-white-sm">True</button>
+                <button id="choiceFalse" class="option-btn btn-white-sm">False</button>
             </div>
         </div>
     </section>
