--- a/testimonials.html
+++ b/testimonials.html
@@ -222,84 +222,53 @@
 
     <!-- quiz section -->
     <section class="quiz-section">
-        <h2 class="quiz-title sect-title">
-            The coaching  
-        </h2>
-        <h3 class="quiz-font logo-font">
-            quiz
-        </h3>
-        <div class="quiz-cta-content">
-            <h4 class="quiz-content-title sect-title">
-                Find out if coaching is for you in less than 60 seconds
-            </h4>
-            <!-- <p class="quiz-content-main normal-text">
+        <!-- First quiz CTA section -->
+        <div id="quizCta" class="">
+            <h2 class="quiz-title sect-title">
+                The coaching  
+            </h2>
+            <h3 class="quiz-font logo-font">
+                quiz
+            </h3>
+            <div class="quiz-cta-content">
+                <h4 id="quizResult" class="quiz-content-title sect-title">
+                    Find out if coaching is for you in less than 60 seconds
+                </h4>
+                <div class="quiz-cta">
+                    <a id="quizIntroBtn" href="" class="quiz-cta-btn btn-black normal-text">Tell me more</a>
+                </div>
+            </div>  
+        </div>
+
+        <!-- Second quiz intro section -->
+        <div id="quizIntro" class="quiz-intro quiz-cta-content">
+            <h2 class="quiz-title sect-title">
+                The coaching <span class="logo-font">quiz</span>
+            </h2>
+            <p id="quizIntroText" class="quiz-content-main normal-text">
                 Personal life coaching is not for everyone. There are some who would benefit from a 
                 life coach, but they aren't ready to make the changes necessary to better their lives. 
                 After the quiz you will have a clearer idea and understanding as to whether a life coach is right for you.
-            </p> -->
+            </p>
             <div class="quiz-cta">
-                <a href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
+                <a id="quizStart" href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
             </div>
-        </div>
-    </section>
-    <!-- END: quiz section -->
+        </div>   
 
-    <!-- why tick list section -->
-    <section class="tick-list-section">
-        <div class="tick-list-grid">
-            <div class="tick-list-img">
-                <img src="static/img/core-img/straight.jpeg" alt="">
-            </div>
-            <div class="tick-list-content">
-                <h2 class="sect-title tick-list-title">
-                    This is a must attend if...
-                </h2>
-                <div class="tick-item">
-                    <div class="tick">
-                        <i class="far fa-check-circle"></i>
-                    </div>
-                    <div class="tick-text normal-text">
-                        You're sick of doing it all, never relaxing, and feeling like your schedule controls you. 
-                    </div> 
-                </div>
-                <div class="tick-item">
-                    <span class="tick">
-                        <i class="far fa-check-circle"></i>
-                    </span>
-                    <span class="tick-text normal-text">
-                        Twee shoreditch hoodie cred man bun affogato YOLO selfies. Microdosing tumblr tofu, woke iPhone portland slow-carb. 
-                    </span>
-                </div>
-                <div class="tick-item">
-                    <span class="tick">
-                        <i class="far fa-check-circle"></i>
-                    </span>
-                    <span class="tick-text normal-text">
-                        messenger bag small batch austin everyday carry bicycle rights. Mixed up heirloom echo park. YOLO selfies. Microdosing
-                    </span>
-                </div>
-                <div class="tick-item">
-                    <span class="tick">
-                        <i class="far fa-check-circle"></i>
-                    </span>
-                    <span class="tick-text normal-text">
-                        You're sick of doing it all, never relaxing, and feeling like your schedule controls you. 
-                    </span>
-                </div>
-                <div class="tick-item">
-                    <span class="tick">
-                        <i class="far fa-check-circle"></i>
-                    </span>
-                    <span class="tick-text normal-text">
-                        messenger bag small batch austin everyday carry bicycle rights. Mixed up heirloom echo park. YOLO selfies. Microdosing 
-                    </span>
-                </div>
+        <!-- Third quiz Quiz section -->
+        <div id="quiz" class="quiz-item">
+            <h2 class="quiz-title sect-title">
+                The coaching <span class="logo-font">quiz</span>
+            </h2>
+            <div class="question-number normal-text"><i>Question <span id="questionNumber"></span></i></div>
+            <div id="question" class="normal-text quiz-label"></div> 
+            <div class="options">
+                <button id="choiceTrue" class="option-btn btn-white-sm">True</button>
+                <button id="choiceFalse" class="option-btn btn-white-sm">False</button>
             </div>
         </div>
     </section>
-    
-    <!-- END: why tick list section -->
-    
+    <!-- END: quiz section -->    
 
     <!-- Parralex services section -->
     <section class="services-cta">
