Add content from mhairi for services

--- a/services.html
+++ b/services.html
@@ -68,11 +68,13 @@
         </div>
         <div class="services-hero-text">
             <div class="services-hero-content">
-                <h1 class="services-title">Life coaching</h1>
-                <h2 class="services-subtitle fw-n">For busy women on a mission.</h2>
-                <p class="normal-text">
-                    It's time to quit the tiring hustle and break free to your best lif ever. Don't worry...
-                    I've got a plan to show you how.
+                <h1 class="services-title">Life transformation coaching</h1>
+                <h2 class="sect-title fw-n">Get ready to live full and free</h2>
+                <p class="logo-3 services-logo-title">
+                    Don't worry..
+                </p>
+                <p class="logo-3 services-logo-title">
+                    I've got you!
                 </p>
             </div>
             
@@ -83,22 +85,18 @@
     <!-- intro section -->
     <section class="services-intro">
         <h2 class="about-detail-title sect-title intro-title">
-            Are you aching for a breakthrough, a change to your everyday life?
+            Aside from “how do I pronounce your name” the SECOND most common question I am asked by clients is..
         </h2>
         <h3 class="services-intro-subtitle rob-font">
-            Your time is now.
+            What actually is transformation coaching?
         </h3>
         <div class="intro-text">
             <p class="normal-text">
-                Think champagne toasts, beach side chats, actionable business advice, and sisters for life.
-                 Mixed up heirloom echo park. . Mixed up heirloom echo park. oke iPhone portland slow-carb 
-                 messenger bag.woke iPhone portland slow-carb messenger bag small batch austin everyday carry 
-                 bicycle rights. YThink champagne toasts, beach side chats, actionable business advice, and 
-                 sisters for life. Mixed up heirloom echo park. . Mixed up heirloom echo park. oke iPhone 
-                 portland slow-carb messenger bag.woke iPhone portland slow-carb messenger bag small batch 
-                 austin everyday carry bicycle rights. Mixed up heirloom echo park. oke iPhone portland slow-carb 
-                 messenger bag.woke iPhone portland slow-carb messenger bag small batch austin everyday carry 
-                 bicycle rights.&nbsp;
+                Awesome question! 
+                In short, Transformation coaching helps you make profound changes to ultimately live happy and fulfilled. 
+                Together we take an inside out approach. So unlike traditional life coaching which centres around goals and external changes for surface level shifts, we go a little deeper….but not moonlight meditation deep, don’t worry. 
+                Through our work I help you find and harness your innate power and resilience (whether you believe it’s there or not). Following a process of unlocking blockers and mindful self-awareness you step beyond the psychology that’s been holding you back from living a life you love. 
+                .&nbsp;
             </p>
         </div>
         
@@ -112,23 +110,29 @@
         </h2>
         <div class="who-content">
             <div class="who-item">
-                <h3 class="sect-subtitle who-for-sub">Do you find...</h3>
+                <h3 class="sect-subtitle who-for-sub">Do you know...</h3>
                 <p class="normal-text">
-                    that you're constantly overwhelmed and weighed down by busyness?
+                    what you want but stumble at repetitive hurdles? 
                 </p>
             </div>
             <div class="who-item">
-                <h3 class="sect-subtitle who-for-sub">Are you...</h3>
+                <h3 class="sect-subtitle who-for-sub">Do you feel...</h3>
                 <p class="normal-text">
-                    constantly playing catch up on your to do list feeling like you never get "enough" done?
+                    like you aren’t living authentically but don’t know how to change it?
                 </p>
             </div>
             <div class="who-item">
-                <h3 class="sect-subtitle who-for-sub">Do you want...</h3>
+                <h3 class="sect-subtitle who-for-sub">Do you have...</h3>
                 <p class="normal-text">
-                    to feel the freedom to ACTUALLY relax? To find some form of balance?
+                    a sense something is missing but you can’t work out what?
                 </p>
-            </div>    
+            </div>   
+            <div class="who-item">
+                <h3 class="sect-subtitle who-for-sub">Do you make...</h3>
+                <p class="normal-text">
+                    changes to your life but still don’t feel successful or fulfilled?  
+                </p>
+            </div>  
         </div>
     </section>
     <!-- END: who is this for -->
@@ -162,115 +166,152 @@
         <div class="how-content">
             <div class="how-item">
                 <h3 class="sect-subtitle how-sub">Step one</h3>
-                <h2 class="sect-title how-item-title">Initial call</h2>
+                <h2 class="sect-title how-item-title">Discovery call</h2>
                 <p class="normal-text">
-                    Our first coaching call will be the longest. We dive deep into your needs 
-                    and strategize where you want to be versus where you are now. Microdosing 
-                    tumblr tofu, woke iPhone portland slow-carb messenger bag small batch austin 
-                    everyday carry bicycle rights. Mixed up heirloom echo park. YOLO selfies. 
-                    Microdosing tumblr tofu, woke iPhone portland slow-carb messenger bag small 
-                    batch austin everyday. 
+                    This is one of my favourite parts!  We do an intensive deep dive into all things you.  We look at what’s important to you, what’s working for you in your life, what’s working against you and start to pull out common themes that we can explore in the coaching sessions.
                 </p>
             </div>
             <div class="how-item">
                 <h3 class="sect-subtitle how-sub">Step two</h3>
-                <h2 class="sect-title how-item-title">Life plan</h2>
+                <h2 class="sect-title how-item-title">DISC</h2>
                 <p class="normal-text">
-                    Ready to have an actual "life plan"? Yes, this is a thing and it WORKS! woke 
-                    iPhone portland slow-carb messenger bag small batch austin everyday carry bicycle 
-                    rights. Mixed up heirloom echo park. YOLO selfies. Microdosing tumblr tofu, woke 
-                    iPhone portland slow-carb messenger bag small batch austin everyday. Microdosing, 
-                    woke iPhone portland slow-carb messenger bag small batch austin everyday. 
+                    Depending on the program you choose we may do a DISC profiling session.  This is an incredibly powerful tool, pioneered by Dr Marston of Harvard University, to provide a deeper understanding of self.  Following completion of your online questionnaire we pull out your fears, motivators and drivers leaving you with the knowledge to improve your communication, empower your relationships and drive your own performance more effectively.
                 </p>
             </div>
             <div class="how-item">
                 <h3 class="sect-subtitle how-sub">Step three</h3>
                 <h2 class="sect-title how-item-title">Bi-weekly coaching</h2>
                 <p class="normal-text">
-                    Microdosing tumblr tofu, woke iPhone portland slow-carb messenger bag small batch 
-                    austin everyday carry bicycle rights. Mixed up heirloom echo park. Microdosing tumblr 
-                    tofu, everyday carry bicycle rights. Mixed up heirloom echo park. YOLO selfies. Microdosing
-                    tumblr tofu, woke iPhone portland slow-carb messenger bag small batch austin everyday. 
+                    Then the fun really begins.  Our coaching sessions will be structured in a way that becomes familiar and easy but also centred around you. We work with your conscious and subconscious to unlock your specific barriers.  Through powerful questioning I act as your guide to lead you back to your innate power.  I then help you tap into it to elevate your life. 
                 </p>
             </div>    
         </div>
     </section>
     <!-- END: how it works-->
 
-    <!-- Parralex numbers section -->
-    <div class="numbers-parralax" data-parallax="scroll" data-image-src="static/img/bg-img/water-flowers.jpeg">
-        <section id="old-numbers" class="numbers-sect" >
-            <div class="numbers-content">
-                <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide">50+</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide">Number of happy clients</h3>
+    <!-- quiz section -->
+    <section class="quiz-section">
+        <!-- First quiz CTA section -->
+        <div id="quizCta" class="">
+            <h2 class="quiz-title sect-title">
+                The coaching  
+            </h2>
+            <h3 class="quiz-font logo-font">
+                quiz
+            </h3>
+            <div class="quiz-cta-content">
+                <h4 id="quizResult" class="quiz-content-title sect-title">
+                    Find out if coaching is for you in less than 60 seconds
+                </h4>
+                <div class="quiz-cta">
+                    <a id="quizIntroBtn" href="" class="quiz-cta-btn btn-black normal-text">Tell me more</a>
                 </div>
-                <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="200">6</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="200">Advanced coaching certifications</h3>
-                </div>
-                <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="300">10</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="300">Number of educational events per year</h3>
-                </div>
-                <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="400">3</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="400">Cups of tea per day</h3>
-                </div>
+            </div>  
+        </div>
+
+        <!-- Second quiz intro section -->
+        <div id="quizIntro" class="quiz-intro quiz-cta-content">
+            <h2 class="quiz-title sect-title">
+                The coaching <span class="logo-font">quiz</span>
+            </h2>
+            <p id="quizIntroText" class="quiz-content-main normal-text">
+                Personal life coaching is not for everyone. There are some who would benefit from a 
+                life coach, but they aren't ready to make the changes necessary to better their lives. 
+                After the quiz you will have a clearer idea and understanding as to whether a life coach is right for you.
+            </p>
+            <div class="quiz-cta">
+                <a id="quizStart" href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
             </div>
-        </section>
-    </div>
-    <!-- END: parralex numbers section -->   
+        </div>   
+
+        <!-- Third quiz Quiz section -->
+        <div id="quiz" class="quiz-item">
+            <h2 class="quiz-title sect-title">
+                The coaching <span class="logo-font">quiz</span>
+            </h2>
+            <div class="question-number normal-text"><i>Question <span id="questionNumber"></span></i></div>
+            <div id="question" class="normal-text quiz-label"></div> 
+            <div class="options">
+                <button id="choiceTrue" class="option-btn btn-white-sm">True</button>
+                <button id="choiceFalse" class="option-btn btn-white-sm">False</button>
+            </div>
+        </div>
+    </section>
+    <!-- END: quiz section -->
 
     <!-- signature package -->
     <section class="signature-package">
+        <h2 class="logo-3 how-title">
+            Coaching packages
+        </h2>
         <div class="signature-content">
-            <div class="signature-includes">
-                <h2 class="sect-title signature-title">
-                    Signature coaching package
-                </h2>
-                <figure class="includes-fig">
-                    <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
-                    <ul class="includes-list">
-                        <li class="includes-list-item normal-text">
-                            <i class="fas fa-check-square"></i>
-                            Bi-weekly coaching calls
-                        </li>
-                        <li class="includes-list-item normal-text">
-                            <i class="fas fa-check-square"></i>
-                            A strategic life plan
-                        </li>
-                        <li class="includes-list-item normal-text">
-                            <i class="fas fa-check-square"></i>
-                            List the things your package includes here!
-                        </li>
-                        <li class="includes-list-item normal-text">
-                            <i class="fas fa-check-square"></i>
-                            More stuff to add here!
-                        </li>
-                    </ul>
-                </figure>
-                <div class="includes-leave-with">
-                    <h5 class="sect-subtitle how-sub leave-with-title">You'll leave with:</h5>
-                    <p class="normal-text">
-                        A life plan and a strategy to implement it!
-                    </p>
+            <div class="coaching-package-item">
+                <div class="signature-includes">
+                    <h2 class="sect-title signature-title">
+                        Swift
+                    </h2>
+                    <figure class="includes-fig">
+                        <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
+                        <ul class="includes-list">
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Complimentary 30 min Discovery Session
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                4 * 50 min coaching sessions
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Email contact in between (3 * per week)
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Access to free resources
+                            </li>
+                        </ul>
+                    </figure>
                 </div>
+                <div class="signature-button about-cta-btn">
+                    <a class="" href="">I'm ready for this.</a>
+                </div>    
             </div>
-            <div class="signature-price">
-                <div class="price-content">
-                    <h3 class="price-number">
-                        £2, 200
-                    </h3>
-                    <p class="price-text normal-text">
-                        This is the monthly investment and most clients do 6 months.
-                        Payment plans available
-                    </p>
+            <div class="coaching-package-item">
+                <div class="signature-includes">
+                    <h2 class="sect-title signature-title">
+                        signature
+                    </h2>
+                    <figure class="includes-fig">
+                        <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
+                        <ul class="includes-list">
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Complimentary 30 min Discovery Session
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                6 * 1hr coaching sessions
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Unlimited PDP exercises
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                WhatsApp contact (3 * per week)
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Access to free resources
+                            </li>
+                        </ul>
+                    </figure>
                 </div>
+                <div class="signature-button about-cta-btn">
+                    <a class="" href="">I'm ready for this.</a>
+                </div>    
             </div>
-            <div class="signature-button about-cta-btn">
-                <a class="" href="">I'm ready for this.</a>
-            </div>
+
         </div>
     </section>
 
