--- a/snippets/snippets.html
+++ b/snippets/snippets.html
@@ -202,3 +202,23 @@
 </section>
 
 <!-- END: why tick list section -->
+
+
+<!-- <div class="includes-leave-with">
+        <h5 class="sect-subtitle how-sub leave-with-title">You'll leave with:</h5>
+        <p class="normal-text">
+            A life plan and a strategy to implement it!
+        </p>
+    </div> -->
+
+     <!-- <div class="signature-price">
+                <div class="price-content">
+                    <h3 class="price-number">
+                        £2, 200
+                    </h3>
+                    <p class="price-text normal-text">
+                        This is the monthly investment and most clients do 6 months.
+                        Payment plans available
+                    </p>
+                </div>
+            </div> -->
